XWIKI-22501: Attachment progress info is lacking contrast * Removed the opacity that was here without a specific good reason. This solves the contrast issue and AFAIK wasn't necessary for anything * Added a border radius to improve consistency of the skin style since `XWIKI-21334: Uniformize the rounded edges of visual elements`

--- a/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/upload.css
+++ b/xwiki-platform-core/xwiki-platform-web/xwiki-platform-web-war/src/main/webapp/resources/uicomponents/widgets/upload.css
@@ -40,7 +40,6 @@
 }
 .progress-info {
   clear: right;
-  opacity: 0.5;
 }
 .upload-inprogress .progress-info {
   opacity: 1;
